[project]
name = "myllm"
version = "0.1.0"
description = "LLM from scratch — notebook and tokenizer experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.7.0",
    "notebook>=7.1.0",
    "tiktoken>=0.7.0",
    "torch==2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
